Fix avatar layout bug

--- a/src/assets/avatar.scss
+++ b/src/assets/avatar.scss
@@ -55,6 +55,8 @@
 			padding: 0;
 			display: block;
 			text-align: center;
+			margin-left: auto;
+			margin-right: auto;
 		}
 	}
 }
